update speaker page

--- a/speaker/index.html
+++ b/speaker/index.html
@@ -233,15 +233,7 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p></p>
-
-
-
-<p></p>
-
-
-
-<p></p>
+<p>Flavio H. Fenton is a Professor in the School of Physics at Georgia Tech, specializing in nonlinear dynamics and chaos, with focus on their applications to biological and physiological systems. He is deeply involved in computational physics and high-performance computing. His research uses an equally combined approach of theoretical work, experiments, and computer simulations involving network-based approaches. Dr. Fenton has been recognized as a Fellow of the American Physical Society for his groundbreaking contributions to the understanding of the nonlinear dynamics of cardiac arrhythmias. He has also received the prestigious Douglas P. Zipes Lectureship Award from the Heart Rhythm Society. Dr. Fenton&#8217;s work has been supported by grants from the National Science Foundation (NSF), National Institutes of Health (NIH), and the American Heart Association (AHA). In addition to his research, Dr. Fenton is passionate about teaching and outreach. He has designed and delivered numerous graduate and undergraduate workshops and has received several teaching awards.</p>
 
 
 
