update fontsize and logsize

--- a/application-deadlines/index.html
+++ b/application-deadlines/index.html
@@ -37,7 +37,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 :root :where(.wp-block-navigation a:where(:not(.wp-element-button)):hover){text-decoration: none;}
 :root :where(.wp-block-navigation a:where(:not(.wp-element-button)):focus){text-decoration: none;}
 :root :where(.wp-block-navigation a:where(:not(.wp-element-button)):active){text-decoration: none;}
-:root :where(p){color: var(--wp--preset--color--custom-black);font-size: clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.682), 20px);padding-top: var(--wp--preset--spacing--20);padding-bottom: var(--wp--preset--spacing--20);}:root :where(p){hyphens: auto;
+:root :where(p){color: var(--wp--preset--color--custom-black);font-size: clamp(14px, 0.875rem + ((1vw - 3.2px) * 0.682), 20px);padding-top: 0;padding-bottom: 0;}:root :where(p){hyphens: auto;
 text-align: justify;
 word-break:normal;}
 :root :where(p a:where(:not(.wp-element-button))){color: var(--wp--preset--color--custom-black);}
