update poster site

--- a/poster_announcements/index.html
+++ b/poster_announcements/index.html
@@ -69,7 +69,7 @@ background-color: #f9f9f9;
 }:root :where(.wp-block-separator){}:root :where(.wp-block-separator:not(.is-style-wide):not(.is-style-dots):not(.alignwide):not(.alignfull)){width: 100px}:root :where(p){hyphens: auto;
 text-align: justify;
 word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-image){max-width: 100%;}</style>
-<style id="core-block-supports-inline-css">.wp-container-core-navigation-is-layout-1{gap:0;justify-content:center;}.wp-elements-f9bfd34c912e92c8a9ef2144bd22c023 a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-black);}.wp-elements-593bfb268b8579de3437a1d2d2df98be a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-red);}.wp-elements-acdef0ffd25e09e7ec2fd9daec1d6b23 a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-red);}.wp-elements-80e7afb784ef314db2c89d4577fcd725 a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-red);}.wp-elements-5ccadf69bc488bcd8b7404f045d58237 a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-red);}.wp-elements-7e385d684b79918e4696032bf50251a4 a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-red);}</style>
+<style id="core-block-supports-inline-css">.wp-container-core-navigation-is-layout-1{gap:0;justify-content:center;}.wp-elements-f9bfd34c912e92c8a9ef2144bd22c023 a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-black);}.wp-elements-593bfb268b8579de3437a1d2d2df98be a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-red);}.wp-elements-acdef0ffd25e09e7ec2fd9daec1d6b23 a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-red);}.wp-elements-80e7afb784ef314db2c89d4577fcd725 a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-red);}.wp-elements-5ccadf69bc488bcd8b7404f045d58237 a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-red);}.wp-elements-4fcc542c7abba4a6551064ad291fb430 a:where(:not(.wp-element-button)){color:var(--wp--preset--color--custom-red);}</style>
 <style id="wp-block-template-skip-link-inline-css">.skip-link.screen-reader-text {
 			border: 0;
 			clip: rect(1px,1px,1px,1px);
@@ -184,7 +184,7 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p style="font-size:clamp(16.293px, 1.018rem + ((1vw - 3.2px) * 0.989), 25px);"><strong><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-custom-red-color">ISINP ANNOUNCEMENT POSTER</mark></strong><br>(<mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-custom-link-color-color">download here</mark> <a href="https://drive.google.com/file/d/140LuB_U2Rj0jfEdTcxhkzER4I4bAS4hw/view?usp=sharing" target="_blank" rel="noreferrer noopener"><mark style="background-color: rgba(0, 0, 0, 0);" class="has-inline-color has-custom-link-color-color">ISINP-2025-Poster.pdf</mark></a>)</p>
+<p style="font-size:clamp(16.293px, 1.018rem + ((1vw - 3.2px) * 0.989), 25px);"><strong><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-custom-red-color">ISINP ANNOUNCEMENT POSTER</mark></strong><br><span style="font-size:20px">(<mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-custom-link-color-color">download here</mark> <a href="https://drive.google.com/file/d/140LuB_U2Rj0jfEdTcxhkzER4I4bAS4hw/view?usp=sharing" target="_blank" rel="noreferrer noopener"><mark style="background-color: rgba(0, 0, 0, 0);" class="has-inline-color has-custom-link-color-color">ISINP-2025-Poster.pdf</mark></a>)</span></p>
 
 
 
@@ -299,7 +299,7 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p class="has-custom-red-color has-text-color has-link-color wp-elements-7e385d684b79918e4696032bf50251a4" style="font-size:clamp(16.293px, 1.018rem + ((1vw - 3.2px) * 0.989), 25px);text-decoration:underline">Readings related to Network Physiology presenting first steps in building a dynamic Atlas of Systems &amp; Organ Interactions (The Human Physiolome)</p>
+<p class="has-custom-red-color has-text-color has-link-color wp-elements-4fcc542c7abba4a6551064ad291fb430" style="font-size:clamp(16.293px, 1.018rem + ((1vw - 3.2px) * 0.989), 25px);text-decoration:underline">Readings related to Network Physiology presenting first steps in building a dynamic Atlas of Physiological Systems &amp; Organ Interactions (The Human Physiolome)</p>
 
 
 
