--- a/application-form/index.html
+++ b/application-form/index.html
@@ -67,6 +67,16 @@ font-size: 22px;
 border: 2px solid #cccccc;
 border-radius: 6px;
 background-color: #f9f9f9;
+}
+
+.image-link img {
+    border: 4px solid rgb(82, 180, 255); /* 初始边框为2像素蓝色 */
+    padding: 1px; /* 内边距 */
+    transition: border 0.15s ease; /* 添加过渡效果，使边框消失时更平滑 */
+}
+
+.image-link img:hover {
+    border: none; /* 鼠标悬停时边框消失 */
 }:root :where(.wp-block-separator){}:root :where(.wp-block-separator:not(.is-style-wide):not(.is-style-dots):not(.alignwide):not(.alignfull)){width: 100px}:root :where(p){hyphens: auto;
 text-align: justify;
 word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-image){max-width: 100%;}</style>
