--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 <div style="float: right;margin-top: -20px;">
   <div style="display: inline-flex; font-size: 16px; border: 1px solid #ccc; border-radius: 4px; overflow: hidden;">
     <span style="background-color: #444; color: white; padding: 5px 10px;">Total views</span>
-    <span style="background-color: #007bff; color: white; padding: 5px 10px;" id="busuanzi_value_site_pv">0</span>
+    <span style="background-color: #007bff; color: white; padding: 5px 10px;" id="busuanzi_container_page_pv">0</span>
   </div>
 </div>
 </div>
