--- a/index.html
+++ b/index.html
@@ -182,13 +182,11 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 <div style="min-height:60vh;" class="entry-content wp-block-post-content has-global-padding is-layout-constrained wp-block-post-content-is-layout-constrained">
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-<div style="position: relative;">
-<div style="float: right;margin-top: -20px;">
+<div style="text-align: right; margin-top: -10px; margin-bottom: -50px;">
   <div style="display: inline-flex; font-size: 16px; border: 1px solid #ccc; border-radius: 4px; overflow: hidden;">
     <span style="background-color: #444; color: white; padding: 5px 10px;">Total views</span>
-    <span style="background-color: #007bff; color: white; padding: 5px 10px;" id="busuanzi_container_page_pv">0</span>
+    <span style="background-color: #007bff; color: white; padding: 5px 10px;" id="busuanzi_value_page_pv"></span>
   </div>
-</div>
 </div>
 
 
