add google analytics

--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 <link rel="shortlink" href="https://isinp.github.io/isinp-4/">
 <link rel="alternate" title="oEmbed (JSON)" type="application/json+oembed" href="https://isinp.github.io/isinp-4/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fisinp.github.io%2Fisinp-4%2F">
 <link rel="alternate" title="oEmbed (XML)" type="text/xml+oembed" href="https://isinp.github.io/isinp-4/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fisinp.github.io%2Fisinp-4%2F#038;format=xml">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-59RZ4ZFSD6"></script>
+<script>window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-59RZ4ZFSD6');</script>
+
 <script id="wp-load-polyfill-importmap">
 ( HTMLScriptElement.supports && HTMLScriptElement.supports("importmap") ) || document.write( '<script src="https://isinp.github.io/isinp-4/wp-includes/js/dist/vendor/wp-polyfill-importmap.min.js?ver=1.8.2"><\/scr' + 'ipt>' );
 </script>
@@ -236,7 +245,7 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p>The emerging new interdisciplinary field of Network Physiology aims to address this fundamental question. In addition to defining health and disease through structural, dynamical and regulatory changes in individual physiological systems, the new conceptual framework of Network Physiology focuses on the coordination and network interactions among diverse organ systems and sub-systems as a hallmark of physiologic state and function.</p>
+<p>The multidisciplinary field of Network Physiology aims to address this fundamental question. In addition to defining health and disease through structural, dynamical and regulatory changes in individual physiological systems, the new conceptual framework of Network Physiology focuses on the coordination and network interactions among diverse organ systems and sub-systems as a hallmark of physiologic state and function.</p>
 
 
 
