--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p>Novel concepts and approaches derived from recent advances in network theory, coupled dynamical systems, statistical and computational physics, signal processing and biological engineering show promise to provide new insights into the complexity of physiological structure and function in health and disease, bridging sub-cellular level signaling with inter-cellular interactions and communications among integrated organ systems and sub-systems. These advances form first building blocks in the methodological formalism and theoretical framework necessary to address the problems and challenges in the field of Network Physiology.</p>
+<p>Novel concepts and approaches derived from recent advances in network theory, coupled dynamical systems, statistical and computational physics, signal processing and biomedical engineering show promise to provide new insights into the complexity of physiological structure and function in health and disease, bridging sub-cellular level signaling with inter-cellular interactions and communications among integrated organ systems and sub-systems. These advances form first building blocks in the methodological formalism and theoretical framework necessary to address the problems and challenges in the field of Network Physiology.</p>
 
 
 
@@ -257,11 +257,11 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p class="word-wrap:break-word!important; overflow-wrap:break-word!important;">This international summer institute will integrate empirical and theoretical knowledge across disciplines with the aim to understand in different contexts, from extensive data analysis and modeling approaches to clinical practice, how diverse physiological systems and sub-systems dynamically interact to produce health and disease. </p>
+<p class="word-wrap:break-word!important; overflow-wrap:break-word!important;">The International Summer Institute on Network Physiology will integrate empirical and theoretical knowledge across disciplines with the aim to understand in different contexts, from extensive data analyses and modeling approaches to clinical practice, how diverse physiological systems and sub-systems dynamically interact to produce health and disease.</p>
 
 
 
-<p class="word-wrap:break-word!important; overflow-wrap:break-word!important;">This will be an interactive event with lectures ranging from physics and applied mathematics to neuroscience, physiology and medicine, covering a range of physiological systems from the cellular to the organ level, and will discuss the challenges, current frontiers and future developments in the emerging field of Network Physiology.</p>
+<p class="word-wrap:break-word!important; overflow-wrap:break-word!important;">This will be an interactive event with lectures ranging from physics and applied mathematics to neuroscience, physiology and medicine, covering a range of physiological systems from the cellular to the organism level, and will discuss the challenges, current frontiers and future developments in the multidisciplinary field of Network Physiology.</p>
 
 
 
@@ -269,11 +269,11 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p>This International Summer Institute aims to provide a relaxed setting where lecturers and attendees interact throughout the course of the week. We have speakers, prominent leaders in their respective fields, who will present new directions in the theory of networks of dynamical systems, brain and neuronal dynamics, tissues and cell assemblies, pair-wise and network interactions of organ systems and sub-systems, and advanced methods from non-linear dynamics and synchronization phenomena.</p>
+<p>ISINP-2025 aims to provide a relaxed setting where lecturers and attendees interact throughout the course of a week. We have speakers, prominent leaders in their respective fields, who will present new directions in the theory of networks of dynamical systems, brain and neuronal dynamics, tissues and cell assemblies, genomic, proteomic and metabolic networks, pair-wise and network interactions of organ systems and sub-systems, various imaging modalities, sensory networks, integrated platforms of biomedical devices, and advanced methods from non-linear dynamics and synchronization phenomena.</p>
 
 
 
-<p>The Summer Institute will address a diverse audience of graduate students, postdoctoral fellows, research scientists and faculty across a broad range of disciplines and fields from physics, applied mathematics and biomedical engineering to neuroscience, physiology and clinical medicine.</p>
+<p>The Summer Institute will address a diverse audience of graduate students, postdoctoral fellows, research scientists and faculty across a broad range of disciplines and fields from physics, applied mathematics, computational and data science, and biomedical engineering to neuroscience, physiology and clinical medicine.</p>
 
 
 
@@ -281,7 +281,7 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p>Plamen Ch. Ivanov<br>Organizer and Director, International Summer Institute on Network Physiology (ISINP)</p>
+<p>Plamen Ch. Ivanov<br>Organizer and Director, International Summer Institute on Network Physiology (ISINP),<br>Lake Como School for Advanced Studies</p>
 
 
 
