update the program section

--- a/application-deadlines/index.html
+++ b/application-deadlines/index.html
@@ -216,7 +216,7 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p style="font-size:clamp(15.747px, 0.984rem + ((1vw - 3.2px) * 0.938), 24px);"><strong><mark style="background-color:rgba(0, 0, 0, 0); font-size:24px;" class="has-inline-color has-custom-red-color">APPLICATION:</mark></strong><br><span style="font-size:20px">The International Summer Institute on Network Physiology (ISINP) is open to maximum 70 PhD. students, postdoctoral fellows, research scientists and faculty.</span></p>
+<p style="font-size:clamp(15.747px, 0.984rem + ((1vw - 3.2px) * 0.938), 24px);"><strong><mark style="background-color:rgba(0, 0, 0, 0); font-size:24px;" class="has-inline-color has-custom-red-color">APPLICATION:</mark></strong><br><span style="font-size:20px">The International Summer Institute on Network Physiology (ISINP) is open to maximum 70 M.S., Ph.D. and M.D. students, postdoctoral fellows, research scientists and faculty.</span></p>
 
 
 
@@ -236,7 +236,7 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p style="font-size:clamp(16.293px, 1.018rem + ((1vw - 3.2px) * 0.989), 25px);line-height:1.5"><strong><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-custom-red-color">HOW TO APPLY:</mark></strong><br><span style="font-size:20px">All applicants have to fill out the application form and to submit a short CV, list of publications, and a motivation letter for their participation in the Summer Institute. (<a href="https://isinp.github.io/isinp-4/application-form/" data-type="page" data-id="126"><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-custom-link-color-color">see Application Form</mark></a>)</span></p>
+<p style="font-size:clamp(16.293px, 1.018rem + ((1vw - 3.2px) * 0.989), 25px);line-height:1.5"><strong><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-custom-red-color">HOW TO APPLY:</mark></strong><br><span style="font-size:20px">All applicants should fill out the application form and submit a short CV, list of publications, and a motivation letter for their participation in the Summer Institute. (<a href="https://isinp.github.io/isinp-4/application-form/" data-type="page" data-id="126"><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-custom-link-color-color">see Application Form</mark></a>)</span></p>
 
 
 
