--- a/application-form/index.html
+++ b/application-form/index.html
@@ -223,11 +223,11 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p><strong>Application materials for students and postdocs</strong><br>Required: curriculum vitae; list of publications; motivation letter.<br>Optional: title and two-page abstract for poster presentation.(See <a href="https://isinp.github.io/isinp-4/poster_announcements/"><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-custom-link-color-color">Poster &amp; Announcements</mark></a>)<br>[pdf, max 2MB]</p>
+<p><strong>Application materials for <span style="text-decoration: underline;">Students and Postdocs</span></strong><br>Required: curriculum vitae; list of publications; motivation letter.<br>Optional: title and two-page abstract for poster presentation.(See <a href="https://isinp.github.io/isinp-4/poster_announcements/"><mark class="has-inline-color has-custom-link-color-color" style="background-color: rgba(0, 0, 0, 0);">Poster &amp; Announcements</mark></a>)<br>[pdf, max 2MB]</p>
 
 
 
-<p><strong>Application materials for faculty</strong><br>Required: curriculum vitae; list of publications.<br>Optional: title and two-page abstract for poster presentation.(See <a href="https://isinp.github.io/isinp-4/poster_announcements/"><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-custom-link-color-color">Poster &amp; Announcements</mark></a>)<br>[pdf, max 2MB]</p>
+<p><strong>Application materials for <span style="text-decoration: underline;">Faculty</span></strong><br>Required: curriculum vitae; list of publications.<br>Optional: title and two-page abstract for poster presentation.(See <a href="https://isinp.github.io/isinp-4/poster_announcements/"><mark class="has-inline-color has-custom-link-color-color" style="background-color: rgba(0, 0, 0, 0);">Poster &amp; Announcements</mark></a>)<br>[pdf, max 2MB]</p>
 
 
 
