--- a/participants/index.html
+++ b/participants/index.html
@@ -220,11 +220,15 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p><span style="text-decoration: underline;"><strong>Adam McCormack</strong></span>, Ph. D. Student<br>Department of Biomedical Engineering,<br>Boston University, USA</p>
+<p><span style="text-decoration: underline;"><strong>Óscar Abenza</strong></span>, Ph. D.<br>Faculty of Medicine and Health Sciences, <br>University of Barcelona, Spain<br>Complex Systems in Sport,<br>INEFC University of Barcelona, Spain</p>
 
 
 
-<p><span style="text-decoration: underline;"><strong>Alexander Hammer</strong></span>, Ph. D. Student<br>Institute of Biomedical Engineering,<br>Technical University of Dresden, Germany</p>
+<p><span style="text-decoration: underline;"><strong>Yaopeng Ma</strong></span>, Ph. D.<br>Keck Laboratory for Network Physiology,<br>Boston University, USA</p>
+
+
+
+<p></p>
 </div>
 </div>
 <script id="wp-block-template-skip-link-js-after">( function() {
