--- a/program/index.html
+++ b/program/index.html
@@ -249,7 +249,7 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p>Klaus Lehnertz, Ulrich Parlitz, J. Randall Moorman, Olga Sosnovtseva, Robert J. Thomas, Marina de Tommaso, Juergen Kurths, Luca Faes, Kathryn Hibbert, Rosario Mantegna.</p>
+<p>Krasimira Tsaneva-Atanasova, Joseph Loscalzo, James W. Holsapple, Alan Macy, Ulrich Parlitz, J. Randall Moorman, Robert J. Thomas, Luca Faes, Rosario Mantegna, Peter A. Tass.</p>
 
 
 
@@ -267,83 +267,95 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 
-<p><strong>Natàlia Balague</strong><br><em>INEFC, University of Barcelona, Barcelona, Spain</em><br>1. Percolation processes in network physiology of exercise: Understanding injuries and task disengagement</p>
+<p><strong>Krasimira Tsaneva-Atanasova</strong><br><em>University of Exeter</em>, <em>UK</em><br>1. <br>2. </p>
 
 
 
-<p><strong>Ronny P. Bartsch</strong><br><em>Department of Physics, Bar-llan University, Israel</em><br>1. EEG synchronization networks of Parkinson’s disease patients with freezing of gait</p>
+<p><strong>Natàlia Balague</strong><br><em>INEFC, University of Barcelona, Barcelona, Spain</em><br>1. </p>
 
 
 
-<p><strong>Luca Faes</strong><br><em>Department of Engineering, University of Palermo, Italy</em><br>1. Information-theoretic analysis of high-order interactions in physiological networks of oscillatory processes</p>
+<p><strong>Ronny P. Bartsch</strong><br><em>Department of Physics, Bar-llan University, Israel</em><br>1.</p>
 
 
 
-<p><strong>Shlomo Havlin</strong><br><em>Department of Physics, Bar-llan University, Israel</em><br>1. Network applications in physiology and biology<br>2. Network science and applications</p>
+<p><strong>Paul Bogdan</strong><br><em>Ming Hsieh Department of Electrical and Computer Engineering, </em><br><em>University of Southern California, USA</em><br>1.</p>
 
 
 
-<p><strong>Kathryn A. Hibbert</strong><br><em>Department of Pulmonary and Critical Care Medicine, Massachusetts General Hospital, USA Harvard </em><em>Medical School, USA</em><br>1. Heterogeneity in critical illness: challenges and opportunities<br>2. COVID-19: A case for Network Physiology</p>
+<p><strong>Luca Faes</strong><br><em>Department of Engineering, University of Palermo, Italy</em><br>1. </p>
 
 
 
-<p><strong>Plamen Ch. Ivanov</strong><br><em>Keck Laboratory for Network Physiology, Department of Physics, Boston University, USA<br></em><em>Brigham and Women’s Hospital, Division of Sleep Medicine, Harvard Medical School, Boston, USA</em><br>1. The new field of Network Physiology: mapping the Human Physiolome<br>2. Physiologic network interactions: novel hallmark of physiological state and function</p>
+<p><strong>Flavio H. Fenton</strong><br><em>School of Physics,  Georgia Tech, USA</em><br>1.<br>2.</p>
 
 
 
-<p><strong>Jürgen Kurths</strong><br><em>Department of Physics, Humboldt University Berlin, Germany<br>Potsdam Institute for Climate Impact Research, Germany</em><br>1. Synchronization and chimera phenomena in neural networks with time delay and noise<br>2. Quantifying stability in deterministic and stochastic complex networks and its application</p>
+<p><strong>Susanna Gordleeva</strong><br><em>Department of Neurotechnologies,  Neuroscience Research Institute, <br>Lobachevsky State University, Russia</em><br>1. </p>
 
 
 
-<p><strong>Klaus Lehnertz</strong><br>Department of Epileptology at Bonn University Medical Center, Germany<br>1. Biological rhythms and evolving functional brain networks<br>2. Controlling brain networks: Insights from epilepsy</p>
+<p><strong>Shlomo Havlin</strong><br><em>Department of Physics, Bar-llan University, Israel</em><br>1. <br>2. </p>
 
 
 
-<p><strong>Andre Longtin</strong><br>Physics Department, University of Ottawa, ON Canada<br>1. Complexity in Multi-Delay Physiological Feedback Systems<br>2. Deterministic and Stochastic Brain Rhythms</p>
+<p><strong>James W. Holsapple</strong><br><em>Department of Neurological Surgery, Boston University School of Medicine<br>Neurological Surgery, Boston Medical Center, USA</em><br>1.<br>2.</p>
 
 
 
-<p><strong>Randall Moorman</strong><br><em>Department of Medicine, Physiology, Biomedical Engineering, University of Virginia, USA</em><br>1. Challenges: applying network physiology to clinical medicine<br>2. Applied network physiology: new hammers, new nails</p>
+<p><strong>Plamen Ch. Ivanov</strong><br><em>Keck Laboratory for Network Physiology, Department of Physics, Boston University, USA</em><br>1. <br>2. </p>
 
 
 
-<p><strong>Ulrich Parlitz</strong><br><em>Max Planck Research Group Biomedical Physics,<br>Max Planck Institute for Dynamics and Self-Organization, German</em><br>1. The nonlinear dynamics of the heart: collective excitation in networks of cardiac cell<br>2. Modelling and controlling complex dynamics in cardiac networks</p>
+<p><strong>Viktor Jirsa</strong><br><em>CNRS, France</em><br><em>Institut de Neurosciences des Systèmes, Aix-Marseille University, France</em><br>1.<br>2.</p>
 
 
 
-<p><strong>Caterina A. M. La Porta</strong><br><em>Center for Complexity and Biosystems, University of Milan, Italy</em><br><em>Department of Environmental Science and Policy, University of Milan, Italy</em><br>1. Classification of triple-negative breast cancers through a Boolean network model of the epithelial-mesenchymal transition</p>
+<p><strong>Joseph Loscalzo</strong><br><em>Department of Medicine,</em> <em>Brigham and Women’s Hospital, Harvard Medical School, USA</em><br>1.<br>2.</p>
 
 
 
-<p><strong>Alberto Porta</strong><br><em>Department of Biomedical Sciences for Health, University of Milan, Milan, Italy<br>Department of Cardiothoracic, Vascular Anesthesia and Intensive Care, IRCCS Policlinico San Donato, San Donato Milanese, Milan, Italy</em><br>1. A network physiology approach to cardiovascular, cardiorespiratory and cerebrovascular dynamic interactions</p>
+<p><strong>Alan Macy</strong><br><em>Biopac Systems, Inc., Santa Barbara, USA</em><br>1.<br>2.</p>
 
 
 
-<p><strong>Rossella Rizzo</strong><br><em>Department of Engineering, University of Palermo, Italy</em><br><em>Keck Laboratory for Network Physiology, Department of Physics, Boston University, USA</em><br>1. Network physiology of cortico-muscular interactions: reorganization with sleep-stages transitions and neurodegenerative disorders</p>
+<p><strong>Rosario Mantegna</strong><br><em>Department of Applied Physics,  University of Palermo, Italy</em><br><em>Complexity Science Hub, Austria</em><br>1.<br>2.</p>
 
 
 
-<p><strong>Michael G. Rosenblum</strong><br><em>Department of Physics and Astronomy, University of Potsdam, Germany</em><br>1. Controlling collective synchrony by pulsatile stimulation<br>2. Inferring phase and amplitude response of oscillatory systems from observations</p>
+<p><strong>Randall Moorman</strong><br><em>Department of Medicine, Physiology, Biomedical Engineering, University of Virginia, USA</em><br>1. <br>2. </p>
 
 
 
-<p><strong>Olga Sosnovtseva</strong><br><em>Department of Biomedical Sciences, University of Copenhagen, Denmark</em><br>1. Kidney function: Optimization of nephrovascular network<br>2. Network Physiology aspects of diabetic kidney disease</p>
+<p><strong>Ulrich Parlitz</strong><br><em>Max Planck Research Group Biomedical Physics,<br>Max Planck Institute for Dynamics and Self-Organization, German</em><br>1. <br>2. </p>
 
 
 
-<p><strong>Sebastiano Stramaglia</strong><br><em>Dipartimento Interateneo di Fisica, Università degli Studi di Bari Aldo Moro, Italy</em><br>1. Modelling high-order behaviors in Network Physiology with Information Theory<br>2. Localizing high order effects in time and across a complex system</p>
+<p><strong>Sergi Garcia-Retortillo</strong><br><em>Department of Health and Exercise Science, Wake Forest University, USA</em><br><em>Complex Systems in Sport Research Group, University of Barcelona, Spain</em><br>1.</p>
 
 
 
-<p><strong>Robert J. Thomas</strong><br><em>Harvard Medical School; Division of Pulmonary, Critical Care &amp; Sleep,<br>Beth Israel Deaconess Medical Center, USA</em><br>1. Sleep as a network in health and disease<br>2. Sleep transition networks – onset, offset, arousals and awakenings</p>
+<p><strong>Alberto Porta</strong><br><em>Department of Biomedical Sciences for Health, University of Milan, Milan, Italy<br>Department of Cardiothoracic, Vascular Anesthesia and Intensive Care, IRCCS Policlinico San Donato, San Donato Milanese, Milan, Italy</em><br>1. </p>
 
 
 
-<p><strong>Alexey Zaikin</strong><br><em>Computational and System Medicine, Department of Mathematics and Institute for Women’s Health, University College London, UK</em><br>1. Longitudinal, deep, and network biomarkers: Parenclitic and synolitic network analysis<br>2. Intelligence and consciousness in genetic-neuron astrocyte networks</p>
+<p><strong>Rossella Rizzo</strong><br><em>Department of Engineering, University of Palermo, Italy</em><br>1. </p>
 
 
 
-<p><strong>Stefano Zapperi</strong><br><em>Center for Complexity and Biosystems, University of Milan, Italy</em><br><em>Department of Physics, University of Milan, Italy</em><br>1. Information optimized multilayer network representation of high density electroencephalogram</p>
+<p><strong>Michael G. Rosenblum</strong><br><em>Department of Physics and Astronomy, University of Potsdam, Germany</em><br>1. <br>2. </p>
+
+
+
+<p><strong>Eckehard Schöll</strong><br><em>Department of Physics, Berlin Institute of Technology, Germany</em><br><em>Bernstein Center for Computational Neuroscience Berlin, Germany</em><br>1.<br>2.</p>
+
+
+
+<p><strong>Peter A. Tass</strong><br><em>Department of Neurosurgery, Stanford University Medical School, USA</em><br>1.<br>2.</p>
+
+
+
+<p><strong>Robert J. Thomas</strong><br><em>Division of Pulmonary, Critical Care &amp; Sleep, Harvard Medical School</em><br><em>Beth Israel Deaconess Medical Center, USA</em><br>1. <br>2. </p>
 </div>
 </div>
 <script id="wp-block-template-skip-link-js-after">( function() {
