--- a/program/index.html
+++ b/program/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-image-preview:large">
-<title>Program &#8211; Fourth International Summer Institute on Network Physiology</title>
-<link rel="alternate" type="application/rss+xml" title="Fourth International Summer Institute on Network Physiology &raquo; Feed" href="https://isinp.github.io/isinp-4/feed/">
-<link rel="alternate" type="application/rss+xml" title="Fourth International Summer Institute on Network Physiology &raquo; Comments Feed" href="https://isinp.github.io/isinp-4/comments/feed/">
+<title>Program &#8211; Fourth International Summer Institute on Network Physiology (ISINP)</title>
+<link rel="alternate" type="application/rss+xml" title="Fourth International Summer Institute on Network Physiology (ISINP) &raquo; Feed" href="https://isinp.github.io/isinp-4/feed/">
+<link rel="alternate" type="application/rss+xml" title="Fourth International Summer Institute on Network Physiology (ISINP) &raquo; Comments Feed" href="https://isinp.github.io/isinp-4/comments/feed/">
 <script>
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/isinp.github.io\/isinp-4\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.6.2"}};
 /*! This file is auto-generated */
@@ -332,10 +332,6 @@ word-break:normal;}:root :where(.wp-block-post-content){}:root :where(.wp-block-
 
 
 <p><strong>Sergi Garcia-Retortillo</strong><br><em>Department of Health and Exercise Science, Wake Forest University, USA</em><br><em>Complex Systems in Sport Research Group, University of Barcelona, Spain</em><br>1.</p>
-
-
-
-<p><strong>Alberto Porta</strong><br><em>Department of Biomedical Sciences for Health, University of Milan, Milan, Italy<br>Department of Cardiothoracic, Vascular Anesthesia and Intensive Care, IRCCS Policlinico San Donato, San Donato Milanese, Milan, Italy</em><br>1. </p>
 
 
 
