--- a/school-director/index.html
+++ b/school-director/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-image-preview:large">
-<title>School Director &#8211; Fourth International Summer Institute on Network Physiology</title>
-<link rel="alternate" type="application/rss+xml" title="Fourth International Summer Institute on Network Physiology &raquo; Feed" href="https://isinp.github.io/isinp-4/feed/">
-<link rel="alternate" type="application/rss+xml" title="Fourth International Summer Institute on Network Physiology &raquo; Comments Feed" href="https://isinp.github.io/isinp-4/comments/feed/">
+<title>School Director &#8211; Fourth International Summer Institute on Network Physiology (ISINP)</title>
+<link rel="alternate" type="application/rss+xml" title="Fourth International Summer Institute on Network Physiology (ISINP) &raquo; Feed" href="https://isinp.github.io/isinp-4/feed/">
+<link rel="alternate" type="application/rss+xml" title="Fourth International Summer Institute on Network Physiology (ISINP) &raquo; Comments Feed" href="https://isinp.github.io/isinp-4/comments/feed/">
 <script>
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/isinp.github.io\/isinp-4\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.6.2"}};
 /*! This file is auto-generated */
